# farmer-backend-structured

./: .gitignore  main.py  pyproject.toml
src/: __init__.py
src/api/: __init__.py
src/api/middleware/: __init__.py  error_handler.py  ip_whitelist.py  logging.py
src/api/v1/: __init__.py  auth.py  chat.py  conversations.py  documents.py  users.py
src/core/: __init__.py  config.py  dependencies.py  exceptions.py  security.py  what-is-core.md
src/core/config/: __init__.py  base.py  llm.py  prompts.py
src/domain/: __init__.py
src/domain/chat/: __init__.py  hybrid_search.py  intent_classifier.py  rag_engine.py  repository.py  schemas.py  service.py  what-is-chat.md
src/domain/conversation/: __init__.py  repository.py  schemas.py  service.py  what-is-conversation.md
src/domain/document/: __init__.py  processor.py  repository.py  schemas.py  service.py
src/domain/user/: __init__.py  repository.py  schemas.py  service.py  what-is-user.md
src/infrastructure/: __init__.py  vector_store.py
src/infrastructure/database/: connection.py  schema.sql
tests/: conftest.py
tests/test_api/: test_auth.py  test_chat.py
tests/test_core/: test_security.py
