[project]
name = "farmer-backend"
version = "0.1.0"
description = "Farmer RAG System - AI-powered agricultural consultation backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    "websockets>=13.1",
    # Database
    "psycopg2-binary>=2.9.9",
    "chromadb>=0.5.0",
    # Authentication & Security
    "python-jose[cryptography]>=3.3.0",
    "argon2-cffi>=23.1.0", # ðŸ”¥ æ–°å¢žï¼šArgon2 å¯†ç¢¼åŠ å¯†
    "python-dotenv>=1.0.1",
    # AI/RAG Stack
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-google-genai>=2.0.0", # ðŸ”¥ æ–°å¢žï¼šGoogle Gemini æ”¯æ´
    "langchain-text-splitters>=0.3.0", # ðŸ”¥ æ–°å¢žï¼šText Splitters
    "openai>=1.51.0",
    "google-generativeai>=0.8.0", # ðŸ”¥ æ–°å¢žï¼šGoogle AI SDK
    # Document Processing
    "pypdf>=5.0.0",
    "python-docx>=1.1.2",
    "docx2txt>=0.8", # ðŸ”¥ æ–°å¢žï¼šDOCX æ–‡å­—æå–
    "unstructured>=0.15.0", # ðŸ”¥ æ–°å¢žï¼šé€šç”¨æ–‡ä»¶è¼‰å…¥
    "unstructured[xlsx]>=0.15.0", # ðŸ”¥ æ–°å¢žï¼šExcel æ”¯æ´
    # Hybrid Search (BM25 + Chinese)
    "rank-bm25>=0.2.2", # ðŸ”¥ æ–°å¢žï¼šBM25 æ¼”ç®—æ³•
    "jieba>=0.42.1", # ðŸ”¥ æ–°å¢žï¼šä¸­æ–‡åˆ†è©ž
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "email-validator>=2.2.0",
    # HTTP Client
    "httpx>=0.27.0",
    "pillow>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "black>=24.8.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
